--- a/index.html
+++ b/index.html
@@ -11,101 +11,113 @@
 </head>
 
 <body class="light-mode">
-  <div class="container py-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="fw-bold">📝 My To-Do List</h2>
-      <button id="modeToggle" class="btn btn-outline-secondary">🌙</button>
+  <div class="content">
+    <div class="container py-5">
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="fw-bold">📝 My To-Do List</h2>
+        <button id="modeToggle" class="btn btn-outline-secondary">🌙</button>
+      </div>
+
+      <table class="table table-hover text-center rounded-3 overflow-hidden shadow">
+        <thead>
+          <tr>
+            <th>Write your to do list here!!!</th>
+            <th class="text-end actions-column">
+              <button id="addRowBtn" class="btn btn-sm btn-success" title="Add New">
+                <i class="bi bi-plus-lg"></i>
+              </button>
+            </th>
+          </tr>
+        </thead>
+
+        <tbody id="todoListBody">
+          <tr>
+            <td>
+              <div class="editable-container">
+                <span class="editable-text displayText">Walk the dog tomorrow morning!</span>
+                <input type="text" maxlength="70" class="editable-input editInput">
+              </div>
+            </td>
+            <td class="text-end actions-column">
+              <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i
+                  class="bi bi-arrow-up"></i></button>
+              <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
+                  class="bi bi-arrow-down"></i></button>
+              <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="editable-container">
+                <span class="editable-text displayText">Wash the dishes.</span>
+                <input type="text" maxlength="70" class="editable-input editInput">
+              </div>
+            </td>
+            <td class="text-end actions-column">
+              <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i
+                  class="bi bi-arrow-up"></i></button>
+              <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
+                  class="bi bi-arrow-down"></i></button>
+              <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="editable-container">
+                <span class="editable-text displayText">Cook lunch.</span>
+                <input type="text" maxlength="70" class="editable-input editInput">
+              </div>
+            </td>
+            <td class="text-end actions-column">
+              <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i
+                  class="bi bi-arrow-up"></i></button>
+              <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
+                  class="bi bi-arrow-down"></i></button>
+              <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="editable-container">
+                <span class="editable-text displayText">Watch news, netflix and animes!</span>
+                <input type="text" maxlength="70" class="editable-input editInput">
+              </div>
+            </td>
+            <td class="text-end actions-column">
+              <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i
+                  class="bi bi-arrow-up"></i></button>
+              <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
+                  class="bi bi-arrow-down"></i></button>
+              <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="editable-container">
+                <span class="editable-text displayText">Sleep.</span>
+                <input type="text" maxlength="70" class="editable-input editInput">
+              </div>
+            </td>
+            <td class="text-end actions-column">
+              <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i
+                  class="bi bi-arrow-up"></i></button>
+              <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
+                  class="bi bi-arrow-down"></i></button>
+              <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
+            </td>
+          </tr>
+        </tbody>
+
+      </table>
     </div>
-
-    <table class="table table-hover text-center rounded-3 overflow-hidden shadow">
-      <thead>
-        <tr>
-          <th>Write your to do list here!!!</th>
-          <th class="text-end actions-column">
-            <button id="addRowBtn" class="btn btn-sm btn-success" title="Add New">
-              <i class="bi bi-plus-lg"></i>
-            </button>
-          </th>
-        </tr>
-      </thead>
-
-      <tbody id="todoListBody">
-        <tr>
-          <td>
-            <div class="editable-container">
-              <span class="editable-text displayText">Walk the dog tomorrow morning!</span>
-              <input type="text" maxlength="70" class="editable-input editInput">
-            </div>
-          </td>
-          <td class="text-end actions-column">
-            <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i class="bi bi-arrow-up"></i></button>
-            <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
-                class="bi bi-arrow-down"></i></button>
-            <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="editable-container">
-              <span class="editable-text displayText">Wash the dishes.</span>
-              <input type="text" maxlength="70" class="editable-input editInput">
-            </div>
-          </td>
-          <td class="text-end actions-column">
-            <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i class="bi bi-arrow-up"></i></button>
-            <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
-                class="bi bi-arrow-down"></i></button>
-            <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="editable-container">
-              <span class="editable-text displayText">Cook lunch.</span>
-              <input type="text" maxlength="70" class="editable-input editInput">
-            </div>
-          </td>
-          <td class="text-end actions-column">
-            <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i class="bi bi-arrow-up"></i></button>
-            <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
-                class="bi bi-arrow-down"></i></button>
-            <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="editable-container">
-              <span class="editable-text displayText">Watch news, netflix and animes!</span>
-              <input type="text" maxlength="70" class="editable-input editInput">
-            </div>
-          </td>
-          <td class="text-end actions-column">
-            <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i class="bi bi-arrow-up"></i></button>
-            <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
-                class="bi bi-arrow-down"></i></button>
-            <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div class="editable-container">
-              <span class="editable-text displayText">Sleep.</span>
-              <input type="text" maxlength="70" class="editable-input editInput">
-            </div>
-          </td>
-          <td class="text-end actions-column">
-            <button class="btn btn-sm btn-secondary move-up-btn" title="Move Up"><i class="bi bi-arrow-up"></i></button>
-            <button class="btn btn-sm btn-secondary move-down-btn" title="Move Down"><i
-                class="bi bi-arrow-down"></i></button>
-            <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
-          </td>
-        </tr>
-      </tbody>
-
-    </table>
   </div>
+
+  <footer class="text-white text-center p-3 mt-5">
+    &copy; 2025 JTG.
+  </footer>
 
   <script src="js/script.js"></script>
 
 </body>
+
 </html>
