--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>My To-Do List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <script type="module" src="./js/main.js"></script>
 </head>
 
 <body class="light-mode">
@@ -21,6 +22,12 @@
       <table class="table table-hover text-center rounded-3 overflow-hidden shadow">
         <thead>
           <tr>
+            <th class="checkbox-th">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox" id="selectAll">
+                <div class="d-flex flex-column ms-1">Done?</div>
+              </div>
+            </th>
             <th>Write your to do list here!!!</th>
             <th class="text-end actions-column">
               <button id="addRowBtn" class="btn btn-sm btn-success" title="Add New">
@@ -31,11 +38,15 @@
         </thead>
 
         <tbody id="todoListBody">
+          <!-- Row 1 Sample -->
           <tr>
-            <td>
-              <div class="editable-container">
-                <span class="editable-text displayText">Walk the dog tomorrow morning!</span>
-                <input type="text" maxlength="70" class="editable-input editInput">
+            <td class="text-start" colspan="2">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox row-checkbox">
+                <div class="editable-container d-flex flex-column">
+                  <span class="editable-text">Walk the dog tomorrow morning!</span>
+                  <input type="text" maxlength="70" class="editable-input">
+                </div>
               </div>
             </td>
             <td class="text-end actions-column">
@@ -46,11 +57,16 @@
               <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
             </td>
           </tr>
+
+          <!-- Row 2 Sample -->
           <tr>
-            <td>
-              <div class="editable-container">
-                <span class="editable-text displayText">Wash the dishes.</span>
-                <input type="text" maxlength="70" class="editable-input editInput">
+            <td class="text-start" colspan="2">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox row-checkbox">
+                <div class="editable-container d-flex flex-column">
+                  <span class="editable-text">Wash the dishes.</span>
+                  <input type="text" maxlength="70" class="editable-input">
+                </div>
               </div>
             </td>
             <td class="text-end actions-column">
@@ -61,11 +77,16 @@
               <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
             </td>
           </tr>
+
+          <!-- Row 3 Sample -->
           <tr>
-            <td>
-              <div class="editable-container">
-                <span class="editable-text displayText">Cook lunch.</span>
-                <input type="text" maxlength="70" class="editable-input editInput">
+            <td class="text-start" colspan="2">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox row-checkbox">
+                <div class="editable-container d-flex flex-column">
+                  <span class="editable-text">Cook lunch.</span>
+                  <input type="text" maxlength="70" class="editable-input">
+                </div>
               </div>
             </td>
             <td class="text-end actions-column">
@@ -76,11 +97,16 @@
               <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
             </td>
           </tr>
+
+          <!-- Row 4 Sample -->
           <tr>
-            <td>
-              <div class="editable-container">
-                <span class="editable-text displayText">Watch news, netflix and animes!</span>
-                <input type="text" maxlength="70" class="editable-input editInput">
+            <td class="text-start" colspan="2">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox row-checkbox">
+                <div class="editable-container d-flex flex-column">
+                  <span class="editable-text">Watch news, netflix and animes!</span>
+                  <input type="text" maxlength="70" class="editable-input">
+                </div>
               </div>
             </td>
             <td class="text-end actions-column">
@@ -91,11 +117,16 @@
               <button class="btn btn-sm btn-danger delete-btn" title="Delete"><i class="bi bi-trash"></i></button>
             </td>
           </tr>
+
+          <!-- Row 5 Sample -->
           <tr>
-            <td>
-              <div class="editable-container">
-                <span class="editable-text displayText">Sleep.</span>
-                <input type="text" maxlength="70" class="editable-input editInput">
+            <td class="text-start" colspan="2">
+              <div class="d-flex align-items-center">
+                <input type="checkbox" class="completion-checkbox row-checkbox">
+                <div class="editable-container d-flex flex-column">
+                  <span class="editable-text">Sleep.</span>
+                  <input type="text" maxlength="70" class="editable-input">
+                </div>
               </div>
             </td>
             <td class="text-end actions-column">
@@ -107,17 +138,13 @@
             </td>
           </tr>
         </tbody>
-
       </table>
     </div>
   </div>
 
   <footer class="text-white text-center p-3 mt-5">
-    &copy; 2025 JTG.
+    &copy; 2025 Jazz.
   </footer>
-
-  <script src="js/script.js"></script>
-
 </body>
 
 </html>
