Updated checkbox logic.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="d-flex flex-column ms-1">Done?</div>
               </div>
             </th>
-            <th>Write your to do list here!!!</th>
+            <th>Write your tasks here!!!</th>
             <th class="text-end actions-column">
               <button id="addRowBtn" class="btn btn-sm btn-success" title="Add New">
                 <i class="bi bi-plus-lg"></i>
